# amm

./: Cargo.toml  README.md  amm.toml
.github/workflows/: build.yml
src/: main.rs
