[package]
name = "amm"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"

[profile.release]
opt-level = "z"
lto = true
strip = true
